$Id$

2008-10-24  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* pyclewn_install.py __init__.py: The "gvim" name or full pathname can
	be set on pyclewn installation with the environment variable 'vimcmd'.

	* netbeans.py application.py: Load the clewn console after netbeans
	initialisation, to enable the first gdb command on the
	initial [NoName] buffer.
	* misc.py gdb.py misc_posix.py dispatcher.py: pyclewn falls back to
	using pipes when it cannot open a pseudo tty with gdb. Environment
	variables 'CLEWN_PIPES' and 'CLEWN_POPEN' can be used to force this
	behavior. Fix cmd_sigint help message and __doc__ when running with
	pipes.
	* misc.py misc_posix.py dispatcher.py : Fix cannot run two
	simultaneous pyclewn sessions on the same listening port.

===============================================================================
2008-08-12  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* netbeans.py : Fix identification of a clewn buffer when the current
	working directory includes spaces in its pathname.
	* gdb.py : Fix space in path names when using clewn mapped keys.
	* gdbmi.py : Fix Windows pathnames.
	* gdb.py : Fix AssertException on self.gotprompt when quitting. The
	project file is not saved anymore when pyclewn is processing oob
	commands or when gdb is busy.
	* evtloop.py misc.py misc_posix.py misc_win.py: Set $CLEWN_PIPES to
	run clewn with pipes on posix. The same code is run on Windows and
	posix when using pipes.
	* dispatcher.py misc.py misc_posix.py misc_win.py: clewn_select is a
	parameter to the asyncore poll function.
	* gdb.py misc.py misc_posix.py: Posix ProcessChannel using pseudo tty
	or pipes, and generic ProcessChannel using pipes.
	* gdb.py misc.py: Windows regression test suite: overriding
	pprint.pformat to avoid duplicate backslashes in tests verification.
	* setup.py pyclewn_install.py: Windows installer.

===============================================================================