@@ -1,10 +1,11 @@
 $Id$
 
-2008-10-24  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2008-11-22  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* misc.py gdb.py netbeans.py application.py dispatcher.py: Use
+	clewn.Error for exceptions and tidy up raise statements.
 	* pyclewn_install.py __init__.py: The "gvim" name or full pathname can
 	be set on pyclewn installation with the environment variable 'vimcmd'.
-
 	* netbeans.py application.py: Load the clewn console after netbeans
 	initialisation, to enable the first gdb command on the
 	initial [NoName] buffer.
